--- a/src/order-history-form.html
+++ b/src/order-history-form.html
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="checkout__input-box form-group">
                                     <span class="checkout__input-box-title required">Телефон</span>
-                                    <input type="tel" name="telephone" value="+7-(952)-352-56-03" placeholder="Телефон" id="input-telephone" class=" " readonly="">
+                                    <input type="tel" name="telephone" value="+7-(952)-352-56-03" placeholder="Телефон" id="input-telephone-1" class=" " readonly="">
                                     <div class="checkout__input-box-error"></div>
                                 </div>
                                 <div class="checkout__input-box form-group">
